fix: no scroll behaviour with 320px and add gap between images

--- a/style.css
+++ b/style.css
@@ -118,6 +118,7 @@ main {
     display: flex;
     flex-direction: column;
     align-items: center;
+    gap: 8px;
 }
 
 .padding_gallery {
@@ -126,12 +127,14 @@ main {
     align-items: center;
     justify-content: center;
     margin-bottom: 24px;
+    gap: 8px;
 }
 
 .center_gallery {
     display: flex;
     flex-direction: row;
     align-items: center;
+    gap: 8px;
 }
 
 .img_size {
@@ -139,7 +142,6 @@ main {
     border-radius: 16px;
     width: 150px;
     height: 150px;
-    margin: 0 8px;
 }
 
 .img_button {
@@ -299,6 +301,10 @@ main {
 }
 
 @media(min-width: 320px) and (max-width: 830px) {
+
+    main.no_scroll {
+        overflow: hidden;
+    }
 
     header {
         justify-content: center;
